# slam-and-perception

./: .gitignore  README.md
.agent_knowledge/decisions/core/: architecture.md  patterns.md  philosophy.md  purpose.md  stack.md  template.md  tradeoffs.md
.devcontainer/dummy-project/: devcontainer.json
.devcontainer/gtsam/: devcontainer.json
.devcontainer/slam-types/: devcontainer.json
.devcontainer/symforce/: devcontainer.json
.github/: copilot-instructions.md
1-optimization-and-vis-slam/gtsam/: CMakeLists.txt  Dockerfile  README.md  pyproject.toml
1-optimization-and-vis-slam/gtsam/notebook/: pose_graph.ipynb
1-optimization-and-vis-slam/gtsam/scripts/: download_data.py
1-optimization-and-vis-slam/gtsam/src/: domain_types.hpp  main.cpp  pose_graph.hpp
1-optimization-and-vis-slam/slam-types/: CMakeLists.txt  Dockerfile  README.md  frame_visualization.html  pyproject.toml
1-optimization-and-vis-slam/slam-types/include/slam/core/: strong_id.hpp
1-optimization-and-vis-slam/slam-types/include/slam/geometry/: safe_geometry.hpp
1-optimization-and-vis-slam/slam-types/include/slam/geometry/traits/: symforce_traits.hpp
1-optimization-and-vis-slam/slam-types/tests/: test_gtsam_integration.cpp  test_safe_geometry.cpp  test_strong_id.cpp  test_symforce_integration.cpp
1-optimization-and-vis-slam/symforce/: CMakeLists.txt  Dockerfile  README.md  pyproject.toml
1-optimization-and-vis-slam/symforce/.devcontainer/: devcontainer.json
1-optimization-and-vis-slam/symforce/inc/: dataset_parser.hpp  factor_graph.hpp  factor_graph.inl  factor_graph_storage.hpp  factor_graph_storage.inl  geometry_types.hpp
1-optimization-and-vis-slam/symforce/notebook/: generate_factors.ipynb  run_and_visualize_results.ipynb
1-optimization-and-vis-slam/symforce/scripts/: download_data.py
1-optimization-and-vis-slam/symforce/src/: dataset_parser.cpp  factor_graph.cpp  factor_graph_storage.cpp  geometry_types.cpp  main.cpp  pose_graph_optimizer.cpp
dummy_project/: CMakeLists.txt  Dockerfile  pyproject.toml
dummy_project/.devcontainer/: devcontainer.json
dummy_project/scripts/: main.py
scripts/: download_data.py  setup.py  setup.sh
