[project]
name = "SymforceProject"
version = "0.1.0"
description = "Symforce project"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "requests",
    "numpy",
    "ipykernel",
    "symforce>=0.10",
    "setuptools>=82.0.1",
    "pip>=26.0.1",
    "cython<3.0",
    "wheel>=0.46.3",
    "cmake==3.26",
]
